--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
+    "text_values = [x_values]\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_pops['type'] =  # 'bar'"
+    "bar_trace_first_three_pops['type']  # 'bar'"
    ]
   },
   {
