--- a/index.ipynb
+++ b/index.ipynb
@@ -293,17 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [x_values]\n",
+    "text_values = x_values\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -332,19 +332,21 @@
        "data": [
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "8c0ea244-71cc-11e9-87ba-87771664dac5"
+         "uid": "e26c7de6-71cc-11e9-87ba-87771664dac5"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"25c6087f-90d7-417c-b573-b1fb9580c466\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"25c6087f-90d7-417c-b573-b1fb9580c466\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"8c119bc0-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9ca15d19-4229-4d60-b2a0-df1701679ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9ca15d19-4229-4d60-b2a0-df1701679ea8\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"e27a5308-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"25c6087f-90d7-417c-b573-b1fb9580c466\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"25c6087f-90d7-417c-b573-b1fb9580c466\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"type\": \"bar\", \"uid\": \"8c119bc0-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9ca15d19-4229-4d60-b2a0-df1701679ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9ca15d19-4229-4d60-b2a0-df1701679ea8\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"e27a5308-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
