Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,17 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'y': y_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -337,16 +337,21 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "e26c7de6-71cc-11e9-87ba-87771664dac5"
+         "uid": "20fd26aa-71cd-11e9-87ba-87771664dac5",
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9ca15d19-4229-4d60-b2a0-df1701679ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9ca15d19-4229-4d60-b2a0-df1701679ea8\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"e27a5308-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"4ab679c1-c966-4511-baf7-ac4162f80817\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4ab679c1-c966-4511-baf7-ac4162f80817\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"210113c8-71cd-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9ca15d19-4229-4d60-b2a0-df1701679ea8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9ca15d19-4229-4d60-b2a0-df1701679ea8\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"e27a5308-71cc-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"4ab679c1-c966-4511-baf7-ac4162f80817\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4ab679c1-c966-4511-baf7-ac4162f80817\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"210113c8-71cd-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
