--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'y': y_values, 'text': text_values}"
+    "text_values\n",
+    "#bar_trace_first_three_pops = {'type': 'bar', 'y': y_values, 'text': text_values}"
    ]
   },
   {
