--- a/index.ipynb
+++ b/index.ipynb
@@ -309,8 +309,7 @@
    ],
    "source": [
     "text_values = x_values\n",
-    "text_values\n",
-    "#bar_trace_first_three_pops = {'type': 'bar', 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'y': y_values, 'text': text_values}"
    ]
   },
   {
