--- a/index.ipynb
+++ b/index.ipynb
@@ -383,12 +383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-c8e8646906e8>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-c8e8646906e8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\u001b[0m\n\u001b[0m                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values 'y': y_values, 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values 'y': y_values, 'text': x_values}"
    ]
   },
   {
