Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,17 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': x_values}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': x_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -406,8 +406,8 @@
           "Toronto",
           "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "fb7443b8-71cd-11e9-87ba-87771664dac5",
+         "type": "bar",
+         "uid": "0af76d2e-71ce-11e9-87ba-87771664dac5",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -425,8 +425,8 @@
           "Toronto",
           "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "fb744a0c-71cd-11e9-87ba-87771664dac5",
+         "type": "bar",
+         "uid": "0af76ec8-71ce-11e9-87ba-87771664dac5",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -442,10 +442,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"e54f23bf-bcfe-4923-b143-b19828bd93f1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e54f23bf-bcfe-4923-b143-b19828bd93f1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"fb8413a6-71cd-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"fb8414f0-71cd-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c63d3870-7531-410f-8454-11ec036fa9cc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c63d3870-7531-410f-8454-11ec036fa9cc\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0afaaa16-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"0afaabd8-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"e54f23bf-bcfe-4923-b143-b19828bd93f1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e54f23bf-bcfe-4923-b143-b19828bd93f1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"fb8413a6-71cd-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"fb8414f0-71cd-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c63d3870-7531-410f-8454-11ec036fa9cc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c63d3870-7531-410f-8454-11ec036fa9cc\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0afaaa16-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"0afaabd8-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
