--- a/index.ipynb
+++ b/index.ipynb
@@ -383,17 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': ['Buenos Aires Area', 'Toronto Area', 'Pyeongchang Area']}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': ['Buenos Aires Population', 'Toronto Population', 'Pyeongchang Area']}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': ['Buenos Aires Population', 'Toronto Population', 'Pyeongchang Population']}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -402,12 +402,12 @@
        "data": [
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "Buenos Aires Population",
+          "Toronto Population",
+          "Pyeongchang Population"
          ],
          "type": "bar",
-         "uid": "0af76d2e-71ce-11e9-87ba-87771664dac5",
+         "uid": "3b325756-71ce-11e9-87ba-87771664dac5",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -421,12 +421,12 @@
         },
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "Buenos Aires Area",
+          "Toronto Area",
+          "Pyeongchang Area"
          ],
          "type": "bar",
-         "uid": "0af76ec8-71ce-11e9-87ba-87771664dac5",
+         "uid": "3b325922-71ce-11e9-87ba-87771664dac5",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -442,10 +442,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"c63d3870-7531-410f-8454-11ec036fa9cc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c63d3870-7531-410f-8454-11ec036fa9cc\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0afaaa16-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"0afaabd8-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ff2c5af7-dbd5-472e-9687-38ad08466448\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff2c5af7-dbd5-472e-9687-38ad08466448\", [{\"text\": [\"Buenos Aires Population\", \"Toronto Population\", \"Pyeongchang Population\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"3b3a91e6-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires Area\", \"Toronto Area\", \"Pyeongchang Area\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"3b3a933a-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"c63d3870-7531-410f-8454-11ec036fa9cc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c63d3870-7531-410f-8454-11ec036fa9cc\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0afaaa16-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"0afaabd8-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ff2c5af7-dbd5-472e-9687-38ad08466448\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff2c5af7-dbd5-472e-9687-38ad08466448\", [{\"text\": [\"Buenos Aires Population\", \"Toronto Population\", \"Pyeongchang Population\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"3b3a91e6-71ce-11e9-87ba-87771664dac5\"}, {\"text\": [\"Buenos Aires Area\", \"Toronto Area\", \"Pyeongchang Area\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"3b3a933a-71ce-11e9-87ba-87771664dac5\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
